# nc-schema-mount

./: CMakeLists.txt  README.md
.devcontainer/: Containerfile  devcontainer.json
scripts/: nc-schema-mount.sh  netopeer2.sh
src/: main.c
yang/: acc-foo.yang  acc-host.yang
